apps/base/home-assistant/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
spec:
  hosts:
  - home-assistant.k8s
  gateways:
  - istio-ingress/my-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: home-assistant.home-assistant.svc.cluster.local
